<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Passman</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_discard">Delete</string>
    <string name="button_link">Link</string>
    <string name="action_unlink">Unlink</string>
    <string name="action_new">Add accountk</string>
    <string name="sample_domain">example.com</string>
    <string name="sample_username">Chris_Wong</string>
    <string name="sample_password">P@ssw0rd</string>
    <string name="sample_remarks">This is a testing account</string>
    <string name="domain">Domain</string>
    <string name="username">Username</string>
    <string name="password">Passowrd</string>
    <string name="remarks">Remarks</string>
    <string name="title_activity_account_editor">AccountEditorActivity</string>
    <string name="menu_done">Done</string>
    <string name="title_activity_account_detail">Detail</string>
    <string name="delete_dialog_title">Warning!!!</string>
    <string name="delete_dialog_message">You are going to delete this account permanently.\nAre you sure?</string>
    <string name="delete_dialog_yes">Yes</string>
    <string name="delete_dialog_no">No</string>
    <string name="deleted">Account deleted</string>

</resources>
